--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ li {
 
 .hero {
   background-color: #1F2937;
-  padding: 50px 250px;
+  padding: 100px 250px;
   display: flex;
   align-items: center;
   gap: 16px;
@@ -91,5 +91,128 @@ li {
 }
 
 .heroImg {
-  max-width: 50%;
+  max-width: 100%;
+}
+
+/* This is mainly for the third part */
+
+.information {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+.infoHeading {
+  padding-top: 20px;
+  font-size: 36px;
+  font-weight: 800;
+  color: #1F2937;
+}
+
+.infoBoxes {
+  padding-bottom: 20px;
+  display: flex;
+  flex: auto;
+  gap: 75px;
+}
+
+.eachBox {
+  margin: 0;
+  width: 200px;
+  height: auto;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+.infoText {
+  text-align: center;
+  color: #4b4b4b;
+}
+
+.roundedBox {
+  margin: 0;
+  width: 200px;
+  height: 200px;
+  border: solid 5px #3882f6;
+  border-radius: 15px;
+}
+
+/* This is mainly the fourth part */
+
+.quoteContainer {
+  background-color: #e5e7eb;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+.quoteTextCont {
+  margin: 0;
+  padding-top: 50px;
+  width: 1000px;
+  height: 190px;
+  display: flex;
+  flex: auto;
+}
+
+.quoteText {
+  font-size: 36px;
+  font-weight: lighter;
+  color: #1F2937;
+}
+
+.quoteAuthor {
+  margin-left: auto;
+  margin-right: 450px;
+  padding-bottom: 50px;
+  font-weight: bold;
+  display: flex;
+  justify-content: flex-end;
+}
+
+/* This is mainly for the fourth part */
+
+.signUpContainer {
+    display: flex;
+    padding: 50px 100px;
+    justify-content: center;
+    align-items: center;
+}
+
+.signUp {
+  background-color: #3882f6;
+  border-radius: 10px;
+  width: 1100px;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.signUpText {
+  margin-left: 80px;
+  padding: 40px;
+  font-size: 20px;
+  color: #e5e7eb;
+  display: flex;
+  flex-flow: column;
+}
+.signUpText p {
+    margin: 2px;
+}
+
+.signUpButton {
+  margin-right: 80px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: bold;
+  color: #e5e7eb;
+  border: solid 2px #e5e7eb;
+  border-radius: 5px;
+  background-color: #3882f6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
